Fix GitHub Actions permissions and add manual release script
- Add contents: write permission to GitHub Actions workflow
- Create manual release script for testing
- Ready to test CI/CD pipeline

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -10,6 +10,10 @@ on:
       - '.github/workflows/build-release.yml'
   workflow_dispatch:
 
+permissions:
+  contents: write
+  packages: write
+
 jobs:
   test:
     runs-on: ubuntu-latest
