--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "axios": "^1.6.0",
     "chalk": "^4.1.2",
     "commander": "^11.1.0",
+    "dotenv": "^16.5.0",
     "fastmcp": "^3.4.0",
     "timespan-parser": "^1.2.0",
     "zod": "^3.25.67"
