--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@modelcontextprotocol/sdk": "^1.13.0",
     "axios": "^1.6.0",
     "chalk": "^4.1.2",
+    "cli-table3": "^0.6.5",
     "commander": "^11.1.0",
     "dotenv": "^16.5.0",
     "fastmcp": "^3.4.0",
