--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "commander": "^11.1.0",
     "dotenv": "^16.5.0",
     "fastmcp": "^3.4.0",
+    "open": "^10.1.2",
     "timespan-parser": "^1.2.0",
     "zod": "^3.25.67"
   },
