--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "helpmetest-cli",
-  "version": "1.1.1",
+  "version": "1.1.3",
   "description": "HelpMeTest CLI tool for health check monitoring",
   "main": "src/index.js",
   "type": "module",
@@ -34,6 +34,7 @@
     "release:local": "bun run clean && bun run build:linux-x64 && bun run build:darwin-arm64",
     "test:build": "scripts/test-build.sh",
     "build:release": "scripts/build-release.sh",
+    "release": "scripts/release.sh",
     "release:manual": "scripts/manual-release.sh"
   },
   "keywords": [
