🔥 cli->github: Simplify GitHub Actions workflow and templates
- Removed redundant release template in favor of dynamic generation
- Streamlined GitHub Actions workflow to use the new unified release script
- Reduced duplication between manual and automated release processes
- Improved release notes generation with better formatting

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -98,177 +98,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Generate release notes
-        run: |
-          # Check if RELEASE_NOTES.md exists
-          if [ -f "RELEASE_NOTES.md" ]; then
-            echo "📝 Found RELEASE_NOTES.md, extracting latest release notes..."
-            
-            # Extract the latest version's release notes (from the start to the next version heading or EOF)
-            awk -v version="v${{ steps.package-version.outputs.version }}" '
-                BEGIN { printing = 0; }
-                $0 ~ "^## " version { printing = 1; next; }
-                $0 ~ "^## v[0-9]" && printing == 1 { printing = 0; exit; }
-                printing == 1 { print; }
-            ' RELEASE_NOTES.md > latest_notes.txt
-            
-            # Create the full release notes with template and latest changes
-            cat > release-notes.md << EOF
-          # HelpMeTest CLI v${{ steps.package-version.outputs.version }}
-          
-          $(cat latest_notes.txt)
-          
-          ## 📦 Downloads
-          
-          Choose the appropriate binary for your platform:
-          
-          ### Linux
-          - **x86_64**: \`helpmetest-cli_Linux_x86_64.tar.gz\`
-          - **ARM64**: \`helpmetest-cli_Linux_arm64.tar.gz\`
-          - **i386**: \`helpmetest-cli_Linux_i386.tar.gz\`
-          
-          ### macOS
-          - **x86_64 (Intel)**: \`helpmetest-cli_Darwin_x86_64.tar.gz\`
-          - **ARM64 (Apple Silicon)**: \`helpmetest-cli_Darwin_arm64.tar.gz\`
-          
-          ### Windows
-          - **x86_64**: \`helpmetest-cli_Windows_x86_64.zip\`
-          - **ARM64**: \`helpmetest-cli_Windows_arm64.zip\`
-          - **i386**: \`helpmetest-cli_Windows_i386.zip\`
-          
-          ## 🔐 Verification
-          
-          Verify your download using the provided checksums:
-          \`\`\`bash
-          sha256sum -c helpmetest-cli_${{ steps.package-version.outputs.version }}_checksums.txt
-          \`\`\`
-          
-          ## 📖 Installation
-          
-          ### Linux/macOS
-          \`\`\`bash
-          # Download and extract
-          tar -xzf helpmetest-cli_Linux_x86_64.tar.gz
-          
-          # Install to system path
-          sudo mv helpmetest /usr/local/bin/helpmetest
-          sudo chmod +x /usr/local/bin/helpmetest
-          
-          # Verify installation
-          helpmetest --version
-          \`\`\`
-          
-          ### Windows
-          \`\`\`bash
-          # Extract the zip file
-          # Add helpmetest.exe to your PATH
-          # Or run directly: .\helpmetest.exe --version
-          \`\`\`
-          
-          ## 🛠️ Usage
-          
-          \`\`\`bash
-          # Send a health check heartbeat
-          helpmetest health "my-service" "5m"
-          
-          # View system metrics
-          helpmetest metrics
-          
-          # Get help
-          helpmetest --help
-          \`\`\`
-          
-          ## 🔧 Requirements
-          
-          - No external dependencies required (self-contained binary)
-          - Minimum system requirements: 64MB RAM, 100MB disk space
-          EOF
-            # Clean up temporary file
-            rm -f latest_notes.txt
-          else
-            echo "⚠️ RELEASE_NOTES.md not found, using default template..."
-            # Create release notes with default template
-            cat > release-notes.md << 'EOF'
-          # HelpMeTest CLI v${{ steps.package-version.outputs.version }}
-          
-          ## 🚀 What's New
-          
-          - Automated release with cross-platform binaries
-          - Support for Linux, macOS, and Windows platforms
-          - Single binary distribution with embedded runtime
-          
-          ## 📦 Downloads
-          
-          Choose the appropriate binary for your platform:
-          
-          ### Linux
-          - **x86_64**: `helpmetest-cli_Linux_x86_64.tar.gz`
-          - **ARM64**: `helpmetest-cli_Linux_arm64.tar.gz`
-          - **i386**: `helpmetest-cli_Linux_i386.tar.gz`
-          
-          ### macOS
-          - **x86_64 (Intel)**: `helpmetest-cli_Darwin_x86_64.tar.gz`
-          - **ARM64 (Apple Silicon)**: `helpmetest-cli_Darwin_arm64.tar.gz`
-          
-          ### Windows
-          - **x86_64**: `helpmetest-cli_Windows_x86_64.zip`
-          - **ARM64**: `helpmetest-cli_Windows_arm64.zip`
-          - **i386**: `helpmetest-cli_Windows_i386.zip`
-          
-          ## 🔐 Verification
-          
-          Verify your download using the provided checksums:
-          ```bash
-          sha256sum -c helpmetest-cli_${{ steps.package-version.outputs.version }}_checksums.txt
-          ```
-          
-          ## 📖 Installation
-          
-          ### Linux/macOS
-          ```bash
-          # Download and extract
-          tar -xzf helpmetest-cli_Linux_x86_64.tar.gz
-          
-          # Install to system path
-          sudo mv helpmetest /usr/local/bin/helpmetest
-          sudo chmod +x /usr/local/bin/helpmetest
-          
-          # Verify installation
-          helpmetest --version
-          ```
-          
-          ### Windows
-          ```bash
-          # Extract the zip file
-          # Add helpmetest.exe to your PATH
-          # Or run directly: .\helpmetest.exe --version
-          ```
-          
-          ## 🛠️ Usage
-          
-          ```bash
-          # Send a health check heartbeat
-          helpmetest health "my-service" "5m"
-          
-          # View system metrics
-          helpmetest metrics
-          
-          # Get help
-          helpmetest --help
-          ```
-          
-          ## 🔧 Requirements
-          
-          - No external dependencies required (self-contained binary)
-          - Minimum system requirements: 64MB RAM, 100MB disk space
-          EOF
-          fi
-
-      - name: Create release
-        run: |
-          gh release create v${{ steps.package-version.outputs.version }} \
-            --title "HelpMeTest CLI v${{ steps.package-version.outputs.version }}" \
-            --notes-file release-notes.md \
-            release-assets/*
+      - name: Create release using unified script
+        run: ./scripts/release.sh
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
