--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -7,6 +7,9 @@ on:
     paths:
       - 'src/**'
       - 'package.json'
+      - 'README.md'
+      - 'RELEASE_NOTES.md'
+      - 'docs/**'
       - '.github/workflows/build-release.yml'
   workflow_dispatch:
 
@@ -16,89 +19,28 @@ permissions:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v1
-        with:
-          bun-version: latest
-
-      - name: Install dependencies
-        run: bun install
-
-      - name: Run tests
-        run: bun test
+      - name: Install dependencies and run tests
+        run: |
+          bun install
+          bun test
 
   build:
     needs: test
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v1
-        with:
-          bun-version: latest
-
-      - name: Install dependencies
-        run: bun install
-
-      - name: Run build script
-        run: bun run build:release
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: helpmetest-cli-all-platforms
-          path: test-archives/*
+      - name: Build release
+        run: |
+          bun install
+          bun run build:release
 
   release:
     needs: build
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     if: github.ref == 'refs/heads/main'
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Get package version
-        id: package-version
-        run: echo "version=$(node -p "require('./package.json').version")" >> $GITHUB_OUTPUT
-
-      - name: Download all artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: helpmetest-cli-all-platforms
-          path: release-assets
-
-      - name: Verify checksums exist
-        run: |
-          ls -la release-assets/
-          echo "Checksums file:"
-          cat release-assets/helpmetest-cli_${{ steps.package-version.outputs.version }}_checksums.txt
-
-      - name: Check if release exists
-        id: check-release
-        run: |
-          if gh release view v${{ steps.package-version.outputs.version }} >/dev/null 2>&1; then
-            echo "exists=true" >> $GITHUB_OUTPUT
-          else
-            echo "exists=false" >> $GITHUB_OUTPUT
-          fi
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Delete existing release
-        if: steps.check-release.outputs.exists == 'true'
-        run: |
-          gh release delete v${{ steps.package-version.outputs.version }} --yes
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Create release using unified script
-        run: ./scripts/release.sh
+      - name: Publish CLI
+        run: ./scripts/publish.sh
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
