Fix workflow paths - remove cd cli commands
- CLI repository workflow should run directly in the repository root
- Remove unnecessary cd cli commands from all workflow steps
- Workflow is now correctly configured for cli-code repository

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -5,12 +5,12 @@ on:
     branches:
       - main
     paths:
-      - 'cli/src/**'
-      - 'cli/package.json'
-      - 'cli/README.md'
-      - 'cli/RELEASE_NOTES.md'
-      - 'cli/docs/**'
-      - 'cli/.github/workflows/build-release.yml'
+      - 'src/**'
+      - 'package.json'
+      - 'README.md'
+      - 'RELEASE_NOTES.md'
+      - 'docs/**'
+      - '.github/workflows/build-release.yml'
   workflow_dispatch:
 
 permissions:
@@ -23,7 +23,6 @@ jobs:
     steps:
       - name: Install dependencies and run tests
         run: |
-          cd cli
           bun install
           bun test
 
@@ -33,7 +32,6 @@ jobs:
     steps:
       - name: Build release
         run: |
-          cd cli
           bun install
           bun run build:release
 
@@ -43,8 +41,6 @@ jobs:
     if: github.ref == 'refs/heads/main'
     steps:
       - name: Publish CLI
-        run: |
-          cd cli
-          ./scripts/publish.sh
+        run: ./scripts/publish.sh
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
