--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -18,29 +18,30 @@ permissions:
   packages: write
 
 jobs:
-  test:
-    runs-on: self-hosted
-    steps:
-      - name: Install dependencies and run tests
-        run: |
-          bun install
-          bun test
-
-  build:
-    needs: test
-    runs-on: self-hosted
-    steps:
-      - name: Build release
-        run: |
-          bun install
-          bun run build:release
-
-  release:
-    needs: build
+  build-and-release:
     runs-on: self-hosted
     if: github.ref == 'refs/heads/main'
     steps:
+      - name: Clone repository
+        run: |
+          rm -rf cli-build
+          git clone --depth 1 https://github.com/help-me-test/cli-code.git cli-build
+          cd cli-build
+      
+      - name: Install dependencies and test
+        run: |
+          cd cli-build
+          bun install
+          bun test
+      
+      - name: Build release
+        run: |
+          cd cli-build
+          bun run build:release
+      
       - name: Publish CLI
-        run: ./scripts/publish.sh
+        run: |
+          cd cli-build
+          ./scripts/publish.sh
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
