--- a/package.json
+++ b/package.json
@@ -33,9 +33,8 @@
     "package": "bun run build:binary && chmod +x dist/helpmetest",
     "release:local": "bun run clean && bun run build:linux-x64 && bun run build:darwin-arm64",
     "test:build": "scripts/test-build.sh",
-    "build:release": "scripts/build-release.sh",
-    "release": "scripts/release.sh",
-    "release:manual": "scripts/manual-release.sh"
+    "build:release": "scripts/build.sh",
+    "release": "scripts/release.sh"
   },
   "keywords": [
     "health-check",
