🩺 cli->health: Improve container health check reliability
Enhanced health check command to isolate API failures from health status.
Updated documentation with container health integration best practices.
Improved error handling to ensure container orchestrators get accurate health status.
Added guidance for Kubernetes readiness probe usage in different scenarios.

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,18 @@
-# HelpMeTest CLI Environment Variables for Testing
+# HelpMeTest CLI Environment Variables
 # Copy this file to .env and fill in your actual tokens
 
-# Valid HelpMeTest API token for testing
+# Required: Your HelpMeTest API token
 HELPMETEST_API_TOKEN=HELP-your-valid-token-here
 
-# OpenAI API key for MCP testing (optional)
+# Optional: API URL (defaults to https://helpmetest.com)
+HELPMETEST_API_URL=https://helpmetest.com
+
+# Optional: Environment identifier (dev/staging/prod)
+ENV=dev
+
+# Optional: OpenAI API key for MCP testing
 OPENAI_API_KEY=sk-your-openai-key-here
 
-# API URL (optional, defaults to production)
-HELPMETEST_API_URL=https://helpmetest.com
+# Note: Health check exit codes are determined ONLY by command execution,
+# not by API connectivity. Missing/invalid tokens will log warnings but
+# won't prevent health checks from running and returning correct exit codes.
