🚀 cli->workflows: Add installer deployment restart after CLI publish
Added a step to restart the installer deployment in the Kubernetes cluster after publishing the CLI. This ensures that the latest CLI version is immediately available to users through the installer service.

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -43,3 +43,8 @@ jobs:
         run: |
           cd cli-build
           ./scripts/publish.sh
+          
+      - name: Restart installer deployment
+        run: |
+          kubectl rollout restart deployment installer -n helpmetest
+          kubectl rollout status deployment installer -n helpmetest
