Add proxy command for local development tunneling
- New 'helpmetest proxy start' command to tunnel public URLs to localhost
- Support for multiple domains and custom naming
- List active tunnels with 'helpmetest proxy list'
- Fake server for testing with 'helpmetest proxy run-fake-server'
- Integrated with frpc (Fast Reverse Proxy) for persistent connections
- Automatic reconnection handling

--- a/package.json
+++ b/package.json
@@ -46,7 +46,10 @@
     "commander": "^11.1.0",
     "dotenv": "^16.5.0",
     "fastmcp": "^3.4.0",
+    "http-proxy": "^1.18.1",
     "inquirer": "^12.9.6",
+    "localtunnel": "^2.0.2",
+    "multiplex": "^6.7.0",
     "open": "^10.1.2",
     "ramda": "^0.29.1",
     "timespan-parser": "^1.2.0",
