--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "open": "^10.1.2",
     "ramda": "^0.29.1",
     "timespan-parser": "^1.2.0",
+    "undici": "^7.22.0",
     "zod": "^3.25.67"
   },
   "devDependencies": {
